--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -1,3 +1,176 @@
+.page-header {
+  background: var(--color-primary);
+  width: 100vw;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+}
+
+.page-header.inner {
+  height: 5.5rem;
+  margin-bottom: 4rem;
+}
+
+.page-header.inner .container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.page-header.inner h1 {
+  margin: 0 auto;
+
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1.625rem;
+
+  color: var(--color-header-inner-title);
+}
+
+
+#top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#logo {
+  width: 13rem;
+  height: 3rem;
+}
+
+/* 
+ * notification
+/* -------------------------------------------------- */
+#notification {
+  display: flex;
+  align-items: center;
+
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+#notification img {
+  margin-right: 0.5rem; /* 8px of 16px root*/
+}
+
+/* 
+ * avatar
+/* -------------------------------------------------- */
+#avatar-profile {
+  display: flex;
+  align-items: center;
+  color: var(--color-white);
+  text-decoration: none;
+
+  font-family: IBM Plex Sans;
+  text-align: right;
+}
+
+#avatar-profile p {
+  font-size: 1.25rem; /* 20px of 16px root*/
+  line-height: 1.875rem; /*30px of 16px root*/
+  margin-right: 1.25rem;
+
+  font-weight: 600;
+}
+
+#avatar-profile span {
+  display: block;
+
+  font-weight: normal;
+  font-size: 0.875rem; /* 14px of 16px root*/
+  line-height: 1.5rem; /* 24px of 16px root*/
+
+  font-weight: 400;
+}
+
+#avatar-profile p span:hover {
+  text-decoration: underline;
+  color:var(--color-secondary);
+}
+
+#avatar-profile img {
+  width: 4rem; /* 64px of 16px root*/
+  height: 4rem; /* 64px of 16px root*/
+  border-radius: 50%;
+  border: 0.156rem solid #F1972C; /* 2.5px of 16px root*/
+}
+
+/* 
+ * summary
+/* -------------------------------------------------- */
+#summary {
+  margin-top: 2rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* 
+ * summary info
+/* -------------------------------------------------- */
+#summary .info {
+  display:flex;
+  font-family: Inter;
+
+  margin-bottom: 2rem;
+}
+
+.info > div {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.625rem;
+  
+  margin-right: 2.5rem; /* 40px of 16px root*/
+}
+
+.info > div > strong {
+  display: block;
+  
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1.625rem; /* 26px of 16px root*/
+  
+}
+
+/* 
+ * summary button
+/* -------------------------------------------------- */
+#summary .button {
+  padding: 0.75rem 1.25rem 0.75rem 0.75rem;
+  margin-bottom: 2.5rem;
+}
+
+#summary .button span::before {
+  width: 2rem;
+  height: 2rem;
+  content: " "; 
+  background-color: var(--color-background);
+  opacity: 0.16;
+  border-radius: 0.313rem; /* 5px of 16px root*/
+
+  position: absolute;
+}
+
+#summary .button span {
+  width: 2rem;
+  height: 2rem;
+
+  margin-right: 2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#summary .button span img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+
 main {
   margin-top: -2.825rem;
 }
