--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,12 +1,12 @@
 .card {
-  background: var(--color-text);
+  /* background: var(--color-text);
   border-radius: 0.313rem;
   border: 1px solid #E1E3E6;
   color: #5A5A66;
 
   padding: 1.5rem;
 
-  text-align: left;
+  text-align: left; */
 }
 
 .badge {
